ensure search results are visible
Previously, search results would scroll off the page when the main was
scrolled down far enough. Searching while already scrolled down far
enough would hide search results until the page was scrolled toward the
top. These changes make the search results visible regardless of
vertical position within the main content.

Fixes #182

--- a/themes/dosmy/assets/scss/_search.scss
+++ b/themes/dosmy/assets/scss/_search.scss
@@ -17,9 +17,6 @@
 }
 
 .popover.offline-search-result {
-    // Override bootstrap default style (max-width: $popover-max-width;)
-    max-width: 90%;
-
     .card {
         margin-bottom: $spacer * .5;
 
