--- a/themes/dosmy/assets/scss/main.scss
+++ b/themes/dosmy/assets/scss/main.scss
@@ -524,13 +524,10 @@ footer {
 
 .popover {
   margin: 0;
-  top: 10.5rem !important;
-  left: 0 !important;
-  right: 10vw !important;
-  bottom: 0 !important;
+  right: 10vw;
+  bottom: 0;
   min-width: 33vw;
-  max-width: 600px !important;
-  position: fixed !important;
+  max-width: 600px;
   box-shadow: 0 5px 12px 11999px rgba(60,60,60,0.5);
 
   .popover-body {
